m3u8: Simplify control flow for sequence update

Split the tail from the rest of the loop.

https://bugzilla.gnome.org/show_bug.cgi?id=788417